// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchBar /> renders correctly with no text 1`] = `
<div
  className="SearchBar"
>
  <div
    className="SearchBar__inner-div"
  >
    <SearchBarButton
      content={<Unknown />}
      onClick={[Function]}
      title="Search"
    />
    <Connect(SearchBarInput)
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
    />
  </div>
</div>
`;

exports[`<SearchBar /> renders correctly with text 1`] = `
<div
  className="SearchBar"
>
  <div
    className="SearchBar__inner-div"
  >
    <SearchBarButton
      content={<Unknown />}
      onClick={[Function]}
      title="Search"
    />
    <Connect(SearchBarInput)
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
    />
    <SearchBarButton
      content={<Unknown />}
      onClick={[Function]}
      title="Clear"
    />
  </div>
</div>
`;
